[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = "Basic Python interface for Mirth Connect"
name = "mirth-client"
packages = [
  {include = "mirth_client"},
]
readme = "README.md"
version = "1.2.1"

[tool.poetry.dependencies]
Sphinx = {version = ">=3.5.3,<5.0.0", optional = true}
httpx = "^0.18.0"
pydantic = "^1.8.1"
python = "^3.6.2"
sphinx-rtd-theme = {version = "^0.5.1", optional = true}
xmltodict = "^0.12.0"
typing-extensions = "^3.10.0"
semver = "^2.13.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.5b2"
isort = "^5.7.0"
mypy = "^0.902"
pylint = "^2.8.2"
tox = "^3.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.'BASIC']
good-names = "id,e,b"

[tool.pylint.'MASTER']
extension-pkg-whitelist = "pydantic" # PyLint struggles with Pydantic in GH Actions

[tool.pylint.'MESSAGES CONTROL']
# no-self-argument is disabled as it messes with Pydantic validator functions
# Let Black handle line-too-long
disable = "no-self-argument, too-few-public-methods, missing-module-docstring, line-too-long, too-many-arguments"
max-line-length = 88
