[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = "Basic Python interface for Mirth Connect"
name = "mirth-client"
packages = [
  {include = "mirth_client"},
]
readme = "README.md"
version = "3.1.0"

[tool.poetry.dependencies]
Sphinx = {version = ">=3.5.3,<6.0.0", optional = true}
pydantic = "^1.8.2"
python = "^3.7"
semver = "^2.13.0"
sphinx-rtd-theme = {version = ">=0.5.1,<1.1.0", optional = true}
typing-extensions = ">=3.10,<5.0"
xmltodict = ">=0.12,<0.14"
httpx = "^0.23.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^22.1"
isort = "^5.7.0"
lxml = "^4.7.1"
mypy = "^0.961"
pylint = "^2.8.2"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
tox = "^3.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.'BASIC']
good-names = "id,e,b"

[tool.pylint.'MASTER']
extension-pkg-whitelist = "pydantic" # PyLint struggles with Pydantic in GH Actions

[tool.pylint.'MESSAGES CONTROL']
# no-self-argument is disabled as it messes with Pydantic validator functions
# Let Black handle line-too-long
disable = "no-self-argument, too-few-public-methods, missing-module-docstring, line-too-long, too-many-arguments"
max-line-length = 88
