[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = "Basic Python interface for Mirth Connect"
name = "mirth-client"
packages = [
  {include = "mirth_client"},
]
readme = "README.md"
version = "4.2.0"


[tool.poetry.dependencies]
Sphinx = {version = ">=3.5.3,<8.0.0", optional = true}
httpx = ">=0.23,<0.28.2"
pydantic = ">=2.0.0,<3.0.0"
python = "^3.9"
semver = ">=2.13,<4.0"
sphinx-rtd-theme = {version = ">=0.5.1,<3.2.0", optional = true}
typing-extensions = ">=3.10,<5.0"
xmltodict = ">=0.12,<1.1"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.0"
importlib-metadata = "<9" # Workaround for https://github.com/PyCQA/bandit/issues/951
isort = ">=5.7,<7.0" 
lxml = ">=5.2.2,<7.0.0"
mypy = "^1.1"
pytest = ">=7,<9" 
pytest-cov = ">=4,<8" 
tox = ">=3.23,<5.0"
ruff = ">=0.12,<0.16"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.'BASIC']
good-names = "id,e,b"

[tool.pylint.'MASTER']
extension-pkg-whitelist = "pydantic" # PyLint struggles with Pydantic in GH Actions

[tool.pylint.'MESSAGES CONTROL']
# no-self-argument is disabled as it messes with Pydantic validator functions
# Let Black handle line-too-long
disable = "no-self-argument, too-few-public-methods, missing-module-docstring, line-too-long, too-many-arguments"
max-line-length = 88
